RESOLVED FIXED71019
[Chromium] css3/font-feature-settings-rendering.html has incorrect image result after r98542
https://bugs.webkit.org/show_bug.cgi?id=71019
Summary [Chromium] css3/font-feature-settings-rendering.html has incorrect image resu...
Attachments
patch (4.74 KB, patch)
2011-10-28 02:05 PDT, Antti Koivisto
kling: review+
Yury Semikhatsky
Comment 1 2011-10-27 08:12:40 PDT
Added suppression for the failure: http://trac.webkit.org/changeset/98577
Yury Semikhatsky
Comment 2 2011-10-27 08:40:24 PDT
FWIW, tables/mozilla_expected_failures/bugs/bug14007-2.html results also changed after the change.
Antti Koivisto
Comment 3 2011-10-28 02:05:52 PDT
Created attachment 112834 [details] patch I think this should fix it. I can't test as this is a Chromium only feature.
Andreas Kling
Comment 4 2011-10-28 02:58:04 PDT
Comment on attachment 112834 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=112834&action=review Sure, r=me. > LayoutTests/ChangeLog:3 > + Excess newlinery.
Antti Koivisto
Comment 5 2011-10-28 04:52:51 PDT
Yury Semikhatsky
Comment 6 2011-10-28 06:12:32 PDT
(In reply to comment #3) > Created an attachment (id=112834) [details] > patch > > I think this should fix it. I can't test as this is a Chromium only feature. I confirm, the test now passes on Chromium. I removed the suppression http://trac.webkit.org/changeset/98723. Thanks for fixing this!
Note You need to log in before you can comment on or make changes to this bug.