third_party/WebKit/Source/WebCore/css/CSSProperty.cpp
@@ -322,6 +322,8 @@ bool CSSProperty::isInheritedProperty(unsigned propertyID)
     case CSSPropertyWebkitBorderVerticalSpacing:
     case CSSPropertyWebkitBoxDirection:
     case CSSPropertyWebkitColorCorrection:
+    case CSSPropertyWebkitFontFeatureSettings:
+    case CSSPropertyWebkitFontSmoothing:
     case CSSPropertyWebkitLocale:
     case CSSPropertyWebkitHighlight:
     case CSSPropertyWebkitHyphenateCharacter:
@@ -341,6 +343,7 @@ bool CSSProperty::isInheritedProperty(unsigned propertyID)
     case CSSPropertyWebkitTextEmphasisPosition:
     case CSSPropertyWebkitTextEmphasisStyle:
     case CSSPropertyWebkitTextFillColor:
+    case CSSPropertyWebkitTextOrientation:
     case CSSPropertyWebkitTextSecurity:
     case CSSPropertyWebkitTextSizeAdjust:
     case CSSPropertyWebkitTextStroke:
@@ -386,9 +389,6 @@ bool CSSProperty::isInheritedProperty(unsigned propertyID)
 #endif
         return true;
     case CSSPropertyDisplay:
-    case CSSPropertyWebkitFontFeatureSettings:
-    case CSSPropertyWebkitFontSmoothing:
-    case CSSPropertyWebkitTextOrientation:
     case CSSPropertyZoom:
     case CSSPropertyBackground:
     case CSSPropertyBackgroundAttachment:
